src/tests/testfiles/const/6.txt
testfiles/const/6.c:4:8: error: initializing 'int *' with an expression of type 'const int *' discards 'const' qualifier
int* aaa = aa;
   ^
